upgrade shoelace, fix behaviors, working on toggling dark mode

--- a/docs/frontend/styles/components.css
+++ b/docs/frontend/styles/components.css
@@ -31,6 +31,7 @@ kbd {
   border: solid 1px var(--sl-color-neutral-200);
   box-shadow: inset 0 1px 0 var(--sl-color-neutral-0);
   padding: 2px 5px;
+  line-height: 1;
 }
 
 .home main {
@@ -294,7 +295,7 @@ bridgetown-search-results::part(inner) {
 
 .search-modal {
   width: 100%;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: var(--z-search);
@@ -349,7 +350,6 @@ bridgetown-search-results::part(inner) {
 
 .search-modal__results {
 	left: 0;
-	min-height: 100%;
 	max-width: unset;
 	width: 100%;
 	margin: 0 auto;
@@ -387,7 +387,7 @@ bridgetown-search-results::part(inner-link):hover {
 }
 
 .top-nav__go-home,
-.top-nav__search__wrapper {
+.top-nav__command-palette-button {
   display: none;
 }
 
@@ -540,6 +540,11 @@ sl-alert::part(base) {
   margin: 1rem;
 }
 
+.syntax-block {
+  border: 1px solid var(--divider-color);
+  border-radius: var(--sl-input-border-radius-medium);
+}
+
 .syntax-block pre {
   margin: 0;
 }
@@ -548,16 +553,7 @@ sl-alert::part(base) {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid var(--divider-color);
-  border-bottom-color: transparent;
   padding: 4px 8px;
-  border-top-right-radius: var(--sl-input-border-radius-medium);
-  border-top-left-radius: var(--sl-input-border-radius-medium);
-}
-
-.syntax-block .highlight {
-  border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
 }
 
 .syntax-block__badge {
@@ -673,12 +669,8 @@ sl-alert::part(base) {
   }
 
   .top-nav__go-home,
-  .top-nav__search__wrapper {
+  .top-nav__command-palette-button {
     display: flex;
-  }
-
-  .top-nav__search__wrapper {
-    position: relative;
   }
 
   .top-nav__search {
